Fix transition menu on mobile

--- a/src/styles/_BoxSearch.scss
+++ b/src/styles/_BoxSearch.scss
@@ -12,7 +12,7 @@
     border-radius: .2em;
 
     line-height: 2.9em;
-    font-size: .9em;
+    font-size: 16px;
     color: #727272;
   }
   &:before {
@@ -23,7 +23,7 @@
     background: url(../img/search-icon.svg) center/cover no-repeat;
 
     position: absolute;
-    left: .8em;
-    top: .8em;
+    left: 1em;
+    top: 1em;
   }
 }
